# xiao_m0_streamdeck

./: .gitignore  Cargo.toml  build.bat  flash.bat  scan.py
.cargo/: config.toml
src/: main.rs  report_handler.rs  revision.rs  serial.rs
