[package]
name = "xiao-hid-streamdeck"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
log = "0.4.27"
panic-halt = "0.2"
usb-device = "0.3.2"
usbd-hid = { path = "../usbd-hid" }
usbd-serial = "0.2.2"
xiao_m0 = { version = "0.13.0", features = [ "usb" ] }
ssmarshal = { version = "1.0.0", default-features = false }
heapless = "0.8.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release] # Arguments given to the release build profile.
lto = true      # Link-Time Optimization
opt-level = 's' # Optimize for size

[package.metadata]
chip = "ATSAMD21G18A"
